# skills

./: .gitignore  CHANGELOG.md  CLAUDE_SKILL_INSTALL.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  INSTALL_GUIDE.md  LICENSE  PROMO.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  REPOSITORY_SETUP.md  SKILL.md  jsonl_converter.py  pyproject.toml  setup.py
