[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-jsonl-converter"
version = "1.0.0"
description = "Convert Claude AI JSONL session logs to readable Markdown"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["claude", "jsonl", "markdown", "converter", "ai", "logs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Natural Language :: Chinese",
]

[project.urls]
Homepage = "https://github.com/yourusername/claude-jsonl-converter"
Documentation = "https://github.com/yourusername/claude-jsonl-converter/blob/main/README.md"
Repository = "https://github.com/yourusername/claude-jsonl-converter"
"Bug Tracker" = "https://github.com/yourusername/claude-jsonl-converter/issues"

[project.scripts]
jsonl2md = "jsonl_converter:main"
claude-jsonl = "jsonl_converter:main"

[tool.setuptools]
py-modules = ["jsonl_converter"]
